[metadata]
name = checkipaconsistency
version = attr: checkipaconsistency.VERSION
description = Tool to check consistency across FreeIPA servers
long_description = file: README.rst
license = GPLv3
author = Peter Pakos
author-email = peter.pakos@wandisco.com
url = https://github.com/peterpakos/checkipaconsistency
keywords = freeipa ipa ldap consistency cipa
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[options]
include_package_data = True
packages = checkipaconsistency
install_requires =
    pyldap>=2.4.45
    prettytable>=0.7.2
    dnspython>=1.15.0

[options.entry_points]
console_scripts =
  cipa = checkipaconsistency.main:main

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist
release = package upload
testrelease = package upload -r testpypi